--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver class here"
+    "# Define Driver class here\n",
+    "class Driver():\n",
+    "    \n",
+    "    def greeting(self):\n",
+    "        print(\"Hey, how are you?\")\n",
+    "    \n",
+    "    def ask_for_destination(self):\n",
+    "        print(\"Where would you like to go today?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "# Define Passenger class here \n",
+    "class Passenger():\n",
+    "    \n",
+    "    def reply_greeting(self):\n",
+    "        print(\"I am doing well! Thanks for picking me up today!\")\n",
+    "        \n",
+    "    def in_a_hurry(self):\n",
+    "        print(\"Punch it! They're on our tail!\")"
    ]
   },
   {
@@ -79,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
-    "meryl = None # driver\n",
-    "niky = None # passenger\n",
-    "terrance = None # passenger"
+    "daniel = Driver() # driver\n",
+    "meryl = Driver() # driver\n",
+    "niky = Passenger() # passenger\n",
+    "terrance = Passenger() # passenger"
    ]
   },
   {
@@ -98,21 +112,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Punch it! They're on our tail!\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = niky.in_a_hurry()\n",
     "print(no_time_to_talk)"
    ]
   },
@@ -129,29 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Lion class"
+    "# create Lion class\n",
+    "class Lions():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        print('hwwww')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "# create Tiger class\n",
+    "class Tigers():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        print('AOOOO')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "# create Elephant class\n",
+    "class Elephants():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        print('Ewwww')"
    ]
   },
   {
@@ -163,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lions()\n",
+    "tony = Tigers()\n",
+    "dumbo = Elephants()"
    ]
   },
   {
@@ -181,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = [simba, tony, dumbo]"
    ]
   },
   {
@@ -197,10 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hwwww\n",
+      "AOOOO\n",
+      "Ewwww\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in zoo:\n",
+    "    animal.speak()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
